# libmx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  NOTES
bootstrap/: CMakeLists.txt  TestManager.cpp  TestManager.h  main.cpp
bootstrap/res/script/test/: test_scene.msl
bootstrap/res/shader/: basic.fragment  instanced.vertex  test.fragment  test.vertex  text.fragment
modules/: CommonFunctions.cmake  FindSDL2.cmake  enableC11.cmake
src/: format.py
src/application/: Application.cpp  Application.h  Version.h  Window.cpp  Window.h  application.cpp  application.h  window.cpp  window.h
src/collision/area/: Area.cpp  Area.h  EventsToCollisions.cpp  EventsToCollisions.h
src/collision/detection/: CollisionDetector.cpp  CollisionDetector.h
src/collision/quadtree/: Quadtree.cpp  Quadtree.h
src/collision/shape/: Shape.cpp  Shape.h  Shape_Policy.h  SignalizingShape.cpp  SignalizingShape.h
src/devices/: EventWatcher.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Touches.cpp  Touches.h
src/game/: DebugCheats.cpp  DebugCheats.h  ScriptInitializer.cpp  ScriptInitializer.h
src/game/controlscheme/: ControlScheme.cpp  ControlScheme.h
src/game/resources/: Paths.cpp  Paths.h  Resources.cpp  Resources.h
src/game/saves/: Save.cpp  Save.h
src/graphic/: Blender.cpp  Blender.h  Color.cpp  Color.h  OpenGL.h  ScriptableColor.cpp  ScriptableColor.h  Utils.h  ex_Utils.cpp  ex_Utils.h
src/graphic/animation/: Animation.cpp  Animation.h  SingleAnimation.cpp  SingleAnimation.h
src/graphic/ex_particles/: Particle.cpp  Particle.h  ParticleDecorator.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleGenerator.h  Particles.cpp  Particles.h
src/graphic/fonts/: BitmapFont.cpp  BitmapFont.h  Font.cpp  Font.h
src/graphic/images/: Image.cpp  Image.h  Slice9Image.cpp  Slice9Image.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  TextureImage.cpp  TextureImage.h  TextureRental.cpp  TextureRental.h
src/graphic/opengl/: Buffer.h  Framebuffer.h  MVP.h  Program.cpp  Program.h  ProgramInstance.cpp  ProgramInstance.h  Shader.h  Texture.cpp  Texture.h  TimedProgramInstance.h  Uniform.h  Utils.h
src/graphic/particles/: Particle.cpp  Particle.h  ParticleDecorator.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleGenerator.h  Particles.cpp  Particles.h
src/graphic/renderer/: DefaultRenderers.cpp  DefaultRenderers.h  InstancedRenderer.cpp  InstancedRenderer.h  MVP.cpp  MVP.h  TextureRenderer.cpp  TextureRenderer.h  Viewport.cpp  Viewport.h
src/graphic/script/: ScriptableShader.cpp  ScriptableShader.h
src/html/: HTMLRendererFreetype.cpp  HTMLRendererFreetype.h  HTMLRendererQueue.cpp  HTMLRendererQueue.h  MasterCSS.cpp  MasterCSS.h
src/scene/: Actor.cpp  Actor.h  Scene.cpp  Scene.h
src/scene/ex_managers/: SceneManager.cpp  SceneManager.h  SceneStackManager.cpp  SceneTransition.cpp  SceneTransition.h
src/scene/ex_script/: MXCommand.cpp  MXCommand.h  MXCommandSignal.cpp  MXCommandSignal.h  MXCommonCommands.cpp  MXCommonCommands.h  MXEvent.cpp  MXEvent.h  MXScriptableActor.cpp  MXScriptableActor.h  MXSpriteCommands.cpp  MXSpriteCommands.h
src/scene/ex_sprites/: ScrollableSpriteScene.cpp  ScrollableSpriteScene.h  SpriteActor.cpp  SpriteActor.h  SpriteScene.cpp  SpriteScene.h
src/scene/generators/: ActorCreator.cpp  ActorCreator.h  ActorDecorator.h  ActorFactory.cpp  ActorFactory.h  ActorGenerator.h
src/scene/managers/: SceneManager.cpp  SceneManager.h  SceneStackManager.cpp  SceneStackManager.h  SceneTransition.cpp  SceneTransition.h
src/scene/script/: Command.cpp  Command.h  CommandSignal.cpp  CommandSignal.h  CommonCommands.cpp  CommonCommands.h  Event.cpp  Event.h  ScriptableActor.cpp  ScriptableActor.h  SpriteCommands.cpp  SpriteCommands.h
src/scene/sprites/: ScriptableSpriteActor.cpp  ScriptableSpriteActor.h  ScrollableSpriteScene.cpp  ScrollableSpriteScene.h  SpriteActor.cpp  SpriteActor.h  SpriteScene.cpp  SpriteScene.h  TextureScene.cpp  TextureScene.h  ex_ScriptableSpriteActor.cpp  ex_ScriptableSpriteActor.h
src/script/: ExtendedPropertyLoaders.h  PropertyLoaders.h  Script.cpp  Script.h  ScriptClass.cpp  ScriptClass.h  ScriptClassParser.cpp  ScriptClassParser.h  ScriptObject.cpp  ScriptObject.h  ScriptParser.cpp  ScriptParser.h  ScriptUtils.cpp  ScriptUtils.h
src/script/class/: ScriptAnimationClass.cpp  ScriptAnimationClass.h  ScriptImageClass.cpp  ScriptImageClass.h  ScriptSoundClass.cpp  ScriptSoundClass.h
src/script/scriptable/: ScriptableValue.cpp  ScriptableValue.h  ex_ScriptableVariable.cpp  ex_ScriptableVariable.h
src/script/serialization/: Node.h  NodeSerializers.h  RootArchiveObject.h  Serializer.h  StreamSerializer.cpp  StreamSerializer.h
src/sound/: Sample.cpp  Sample.h  Stream.cpp  Stream.h
src/utils/: Array2D.h  Bimap.h  ClassID.h  ContextStack.h  FunctorsQueue.cpp  FunctorsQueue.h  ListFiles.cpp  ListFiles.h  Log.h  PathFinding.h  Random.cpp  Random.h  Signal.h  SignalizingContainer.h  SignalizingVariable.h  Singleton.h  StrongList.h  ThreadPool.h  Time.cpp  Time.h  Utf8.cpp  Utf8.h  Utils.cpp  Utils.h  Vector2.cpp  Vector2.h  clone_ptr.h  unique_ptr_copyable.h
src/utils/RPN/: Parser.cpp  Parser.h
src/utils/graphic/: Easings.cpp  Easings.h
src/utils/pools/: MemoryPool.h  PooledObject.h
src/utils/shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  OrientedRectangle.cpp  OrientedRectangle.h  Quad.cpp  Quad.h  Rectangle.cpp  Rectangle.h  Shapes.h
src/widgets/: Label.cpp  Label.h  PropertyMap.h  Widget.cpp  Widget.h  WidgetScriptBinding.cpp  WidgetScriptBinding.h
src/widgets/Animations/: Animations.cpp  Animations.h
src/widgets/Base/: Slider.cpp  Slider.h
src/widgets/Controllers/: ListController.cpp  ListController.h  PaginatedListController.cpp  PaginatedListController.h
src/widgets/Drawers/: CompositeDrawers.cpp  CompositeDrawers.h  DestinationDrawers.cpp  DestinationDrawers.h  Drawer.cpp  Drawer.h  DrawerManager.cpp  DrawerManager.h  DrawerUtils.cpp  DrawerUtils.h  Drawers.cpp  Drawers.h  ProxyDrawers.cpp  ProxyDrawers.h  SimpleDrawers.cpp  SimpleDrawers.h  (+7 more)
(+90 files in other folders)
